<resources>

    <string name="app_name">Shadowsocks</string>
    <string name="menu_item_switch">代理</string>
    <string name="menu_item_toggle_global">开/关全局模式</string>
    <string name="menu_item_about">关于</string>
    <string name="menu_item_exit">退出</string>
    <string name="config_url">配置地址</string>
    <string name="config_not_set_value">未设置</string>
    <string name="config_url_scan">扫描二维码</string>
    <string name="config_url_manual">手动输入</string>
    <string name="config_url_scan_hint">扫描配置地址的二维码</string>
    <string name="select_app">选择使用代理的软件</string>
    <string name="select_app_detail">未选择</string>
    <string name="proxied_apps">使用代理的软件</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_more">更多&#8230;</string>
    <string name="vpn_connected_status">已连接</string>
    <string name="vpn_disconnected_status">已断开</string>
    <string name="about_info">Shadowsocks android 由dawei开发维护,可以在任意Android 4.0+上使用，无需ROOT权限。它是基于SmartProxy与Shadowsocks-Java改装。</string>
    <string name="exit_confirm_info">这将会断开VPN连接，确定要退出吗？</string>
    <string name="err_invalid_url">无效的配置地址</string>
    <string name="config_url_hint">ss://method:password@host:port</string>
</resources>
