<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


   <LinearLayout
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       >

       <Button
           android:id="@+id/globalBtn"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/menu_item_toggle_global"/>

   </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:tag="ProxyUrl"
        android:padding="13dp">

      <Switch
          android:id="@+id/switchBtn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textOff="@string/btn_cancel"
          android:showText="true"
          android:switchPadding="40dp"
          android:textOn="@string/btn_ok"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ProxyUrlLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:tag="ProxyUrl"
        android:padding="13dp">

        <TextView
            android:id="@+id/textViewProxyUrlTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_url"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewProxyUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_not_set_value"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:alpha="0.4" />

    <LinearLayout
        android:id="@+id/AppSelectLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:tag="AppSelect"
        android:padding="13dp">

        <TextView
            android:id="@+id/textViewAppSelectTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_app"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewAppSelectDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_app_detail"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <View
        android:id="@+id/textViewAppSelectLine"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:alpha="0.4" />

    <ScrollView
        android:id="@+id/scrollViewLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </ScrollView>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"></TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"></TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout android:layout_column="14"></FrameLayout>
    </TableRow>

</TableLayout>